@@ -5,6 +5,8 @@ version ? (????-??-??):
   - BTS#0000466: lms-antyvir: fixed parse error (alec)
   - BTS#0000373: lms-notify: added exception handler for mail server 
     connection problems (alec)
+  - changed stats units to kbps (alec)
+  - added traffic stats in node informations window (alec)
 
 version 1.7.4 Wraith (2005-10-31):
 
